[gd_scene load_steps=16 format=2]

[ext_resource path="res://asset/animals/heifengpig.png" type="Texture" id=1]
[ext_resource path="res://WorldMapSrc/animals/Pig.gd" type="Script" id=2]
[ext_resource path="res://WorldMapAISrc/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://CollisionBoxesSrc/SoftCollision.gd" type="Script" id=4]
[ext_resource path="res://asset/animals/heifengpig-sheet.png" type="Texture" id=5]
[ext_resource path="res://WorldMapAISrc/PlayerDetectionZone.gd" type="Script" id=6]
[ext_resource path="res://Src/DialogueSysteme/dialogue_player/DialoguePlayer.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "New Anim",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.8383
height = 7.97513

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.25224
height = 8.06021

[sub_resource type="Animation" id=7]
resource_name = "Jump"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AniPig:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.35, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, -5.5 ), Vector2( 2, -5.5 ), Vector2( 2, -12 ), Vector2( 2, -16 ), Vector2( 2, -18 ), Vector2( 2, -5.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AniPig:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.45 ), Vector2( 0.45, 0.55 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 59.8452

[node name="Pig" type="KinematicBody2D"]
collision_layer = 33
script = ExtResource( 2 )

[node name="DialoguePlayer" parent="." instance=ExtResource( 7 )]
dialogue_file = "res://Src/DialogueSysteme/dialogue_data/pig.json"

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1.94454, -3.53553 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="AniPig" type="AnimatedSprite" parent="."]
position = Vector2( 2, -12 )
scale = Vector2( 0.45, 0.55 )
frames = SubResource( 4 )
animation = "New Anim"
playing = true

[node name="PigWorldCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0.812149, -1.51003 )
rotation = 1.5708
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="SoftCollision" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2147483664
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2( 1.05678, -1.70003 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="PigAnimPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 7 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
modulate = Color( 0.945098, 0.0980392, 0.0980392, 0.494118 )
position = Vector2( 0.793701, -2.18268 )
shape = SubResource( 8 )
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
